@@ -1,3 +1,9 @@
+2000-11-18  Richard Kreckel  <kreckel@ginac.de>
+
+        * cln.m4: New file.
+        * doc/cln.tex: Document package tools cln-config and cln.m4.
+        * Makefile.in: Care about cln.m4.
+
 2000-11-17  Richard Kreckel  <kreckel@ginac.de>
 
         * cln-config.1: added manpage, as required by a couple of distros.
